--- a/configs/train_abinet_wo_iter.yaml
+++ b/configs/train_abinet_wo_iter.yaml
@@ -1,9 +1,9 @@
 global:
-  name: train-abinet-wo-iter
+  name: train-abinet-wo-iter-v0.9
   phase: train
   stage: train-super
   workdir: workdir
-  seed: ~
+  seed: 0
 
 dataset:
   train: {
@@ -11,7 +11,7 @@ dataset:
              'data/training/MJ/MJ_test/',
              'data/training/MJ/MJ_valid/',
              'data/training/ST' ],
-    batch_size: 384
+    batch_size: 450
   }
   test: {
     roots: [ 'data/evaluation/IC13_857',
@@ -20,11 +20,11 @@ dataset:
              'data/evaluation/IC15_1811',
              'data/evaluation/SVTP',
              'data/evaluation/CUTE80' ],
-    batch_size: 384
+    batch_size: 450
   }
   data_aug: True
   multiscales: False
-  num_workers: 14
+  num_workers: 20
 
 training:
   epochs: 10
@@ -50,14 +50,14 @@ optimizer:
 model:
   name: 'modules.model_abinet.ABINetModel'
   vision: {
-    checkpoint: workdir/pretrain-vision-model/best-pretrain-vision-model.pth,
+    checkpoint: workdir/pretrain-vision-model-v0.5/best-pretrain-vision-model.pth,
     loss_weight: 1.,
     attention: 'position',
     backbone: 'transformer',
     backbone_ln: 3,
   }
   language: {
-    checkpoint: workdir/pretrain-language-model/pretrain-language-model.pth,
+    checkpoint: workdir/pretrain-language-model-v0.7/best-pretrain-language-model.pth,
     num_layers: 4,
     loss_weight: 1.,
     detach: True,
